--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,15 +1,15 @@
 <% include ./partials/header.ejs %>
-    <div class="w-full min-h-screen bg-zinc-800 px-10 py-8 text-white">
-        <div class="cards flex flex-wrap gap-10">
-            <% posts.forEach(function(elem){ %>
-                <div class="w-48 card">
-                    <div class="w-full h-52 rounded-lg bg-zinc-700 overflow-hidden">
-                        <img class="w-full h-full object-cover " src="/images/uploads/<%= elem.image %>" alt="">
-                    </div>
-                    <h5 class="mt-2 font-semibold text-sm"><%= elem.title %></h5>
-                    <h5 class="mt-1 text-xs text-zinc-400"><%= elem.user.username %></h5>
+<div class="w-full min-h-screen bg-zinc-800 px-5 sm:px-8 md:px-10 py-8 text-white">
+    <div class="cards flex flex-wrap gap-4 sm:gap-6 md:gap-10">
+        <% posts.forEach(function(elem){ %>
+            <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 card">
+                <div class="w-full h-56 sm:h-64 rounded-lg bg-zinc-700 overflow-hidden">
+                    <img class="w-full h-full object-cover" src="/images/uploads/<%= elem.image %>" alt="">
                 </div>
-            <% }) %>
-        </div>
+                <h5 class="mt-2 font-semibold text-sm"><%= elem.title %></h5>
+                <h5 class="mt-1 text-xs text-zinc-400"><%= elem.user.username %></h5>
+            </div>
+        <% }) %>
     </div>
+</div>
 <% include ./partials/footer.ejs %>
