--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,14 @@
 </head>
 <body>
   <% if(navbar === true){ %>
-    <div class="w-full bg-zinc-800 text-white px-10 py-3 items-center flex justify-between">
-      <h3>Pinterest</h3>
-      <div class="flex items-center justify-center gap-10">
-        <a href="/profile">Profile</a>
-        <a href="/feed">Feed</a>
-        <a class="px-4 py-2 bg-red-700 rounded-md" href="/logout">Log out</a>
+    <div class="w-full bg-zinc-800 text-white px-6 py-3 flex items-center justify-between">
+      <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl">Pinterest</h3>
+      <div class="flex items-center justify-center gap-4 sm:gap-6 md:gap-8 lg:gap-10">
+        <a href="/profile" class="text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">Profile</a>
+        <a href="/feed" class="text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl">Feed</a>
+        <a class="px-3 py-1 bg-red-700 rounded-md text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl" href="/logout">Log out</a>
       </div>
     </div>
+    
   <% } %> 
   
