--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,12 +1,12 @@
 <% include ./partials/header.ejs %>
-    <div class="text-white w-full px-10 py-5 min-h-screen bg-zinc-800">
-        <h1>Create a new Post</h1>
-        <hr class="opacity-10 mt-3">
-        <form action="/createpost" method="post" enctype="multipart/form-data">
-            <input class="block w-1/3 px-3 py-2 mt-5" type="file" name="postimage">
-            <input class="text-black block w-1/3 px-3 py-2 mt-5 border-2 rounded-md" type="text" name="title" placeholder="Title">
-            <textarea placeholder="Description" class="text-black block w-1/3 px-3 mt-5 py-2 h-60 border-2 rounded-md" name="description"></textarea>
-            <input class="block w-1/3 px-3 py-2 bg-red-700 mt-5 rounded-md" type="submit" value="create a new post">
-        </form>
-    </div>
+<div class="text-white w-full px-4 sm:px-6 md:px-8 lg:px-10 py-5 min-h-screen bg-zinc-800">
+  <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl">Create a new Post</h1>
+  <hr class="opacity-10 mt-3">
+  <form action="/createpost" method="post" enctype="multipart/form-data" class="mt-5">
+    <input class="block w-full sm:w-1/2 px-3 py-2" type="file" name="postimage">
+    <input class="text-black block w-full sm:w-1/2 px-3 py-2 mt-3 sm:mt-5 border-2 rounded-md" type="text" name="title" placeholder="Title">
+    <textarea placeholder="Description" class="text-black block w-full sm:w-1/2 px-3 mt-3 sm:mt-5 py-2 h-40 sm:h-60 border-2 rounded-md" name="description"></textarea>
+    <input class="block w-full sm:w-1/2 px-3 py-2 bg-red-700 mt-3 sm:mt-5 rounded-md" type="submit" value="Create a new post">
+  </form>
+</div>
 <% include ./partials/footer.ejs %>
