--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,17 +1,17 @@
 <% include ./partials/header.ejs %>
-    <div class="w-full min-h-screen bg-zinc-800 px-10 py-8 text-white">
-        <div class="cards flex flex-wrap gap-10">
-            <% user.posts.forEach(function(elem){ %>
-                <div class="w-48 card">
-                    <a href="#">
-                    <div class="w-full h-52 rounded-lg bg-zinc-700 overflow-hidden">
-                        <img class="w-full h-full object-cover" src="/images/uploads/<%= elem.image %>" alt="">
-                    </div>
-                    <h5 class="mt-2 font-semibold text-sm"><%= elem.title %></h5>
-                    </a>
-                    <h5 class="mt-1 text-xs text-zinc-400"><%= user.username %></h5>
-                </div>
-            <% }) %>
-        </div>
-    </div>
+<div class="w-full min-h-screen bg-zinc-800 px-10 py-8 text-white">
+  <div class="cards flex flex-wrap gap-10">
+    <% user.posts.forEach(function(elem){ %>
+      <div class="w-48 card">
+        <a href="/post/<%= elem._id %>">
+          <div class="w-full h-52 rounded-lg bg-zinc-700 overflow-hidden">
+            <img class="w-full h-full object-cover" src="/images/uploads/<%= elem.image %>" alt="">
+          </div>
+          <h5 class="mt-2 font-semibold text-sm"><%= elem.title %></h5>
+        </a>
+        <h5 class="mt-1 text-xs text-zinc-400"><%= user.username %></h5>
+      </div>
+    <% }) %>
+  </div>
+</div>
 <% include ./partials/footer.ejs %>
