--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,17 +1,18 @@
 <% include ./partials/header.ejs %>
-<div class="w-full h-screen  bg-[url('https://images.unsplash.com/photo-1541701494587-cb58502866ab?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center">
-    <div class="w-[25vw] bg-zinc-100 px-4 py-5 rounded-[30px]">
-      <h1 class="text-center text-bold text-zinc-800 tracking-tighter capitalize text-4xl leading-none">create new account</h1>
-      <form action="/register" method="post">
-        <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="email" name="email" placeholder="email">
-        <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="text" name="name" placeholder="Full Name">
-        <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="text" name="username" placeholder="username">
-        <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="password" name="password" placeholder="password">
-        <input class="block rounded-full w-full px-3 py-2 bg-red-600 text-white mt-5 capitalize" type="submit" value="Create new Account" >
-      <p class="text-xs text-zinc-500 font-semibold  mt-8 w-3/4 mx-auto text-center">By continuing, you agree to Pinterest's Terms of Service; Opens a new tab and acknowledge that you've read our Privacy Policy; Opens a new tab. Notice at collection; Opens a new tab.
+<div class="w-full h-screen bg-[url('https://images.unsplash.com/photo-1541701494587-cb58502866ab?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center">
+  <div class="w-[100%] sm:w-[80%] md:w-[60%] lg:w-[40%] xl:w-[30%] bg-zinc-100 px-4 py-5 rounded-[30px]">
+    <h1 class="text-center font-bold text-zinc-800 tracking-tighter capitalize text-4xl leading-none">Create a new account</h1>
+    <form action="/register" method="post">
+      <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="email" name="email" placeholder="Email">
+      <input class="block border-2 w-full px-3 rounded-md py-2 mt-3" type="text" name="name" placeholder="Full Name">
+      <input class="block border-2 w-full px-3 rounded-md py-2 mt-3" type="text" name="username" placeholder="Username">
+      <input class="block border-2 w-full px-3 rounded-md py-2 mt-3" type="password" name="password" placeholder="Password">
+      <input class="block rounded-full w-full px-3 py-2 bg-red-600 text-white mt-5 capitalize" type="submit" value="Create new Account">
+      <p class="text-xs text-zinc-500 font-semibold mt-8 text-center">
+        By continuing, you agree to Pinterest's Terms of Service; Opens a new tab and acknowledge that you've read our Privacy Policy; Opens a new tab. Notice at collection; Opens a new tab.
       </p>
     </form>
-    <a class="inline-block mt-7 text-sm font-semibold text-zinc-700 text-center w-full" href="/">Aready have an Account ?</a>
-    </div>
+    <a class="inline-block mt-7 text-sm font-semibold text-zinc-700 text-center w-full" href="/">Already have an Account?</a>
   </div>
+</div>
 <% include ./partials/footer.ejs %>
