--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header.ejs %>
 <div class="w-full h-screen bg-[url('https://images.unsplash.com/photo-1563089145-599997674d42?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] flex items-center justify-center">
-  <div class="w-full max-w-[500px] bg-zinc-100 px-6 py-5 rounded-[30px] mx-auto">
+  <div class="w-[90%] max-w-[500px] bg-zinc-100 px-6 py-5 rounded-[30px] mx-auto">
     <h1 class="text-center text-bold text-zinc-800 tracking-tighter capitalize text-4xl leading-none">Welcome to Pinterest</h1>
     <form action="/login" method="post">
       <input class="block border-2 w-full px-3 rounded-md py-2 mt-5" type="text" name="username" placeholder="Username">
