--- a/views/postDetails.ejs
+++ b/views/postDetails.ejs
@@ -1,10 +1,10 @@
 <% include ./partials/header.ejs %>
-<div class="w-full flex justify-center min-h-screen bg-zinc-800 px-10 py-8 text-white">
-  <div class="post-details">
-    <div class="w-72 h-80 rounded-lg bg-zinc-700 overflow-hidden">
+<div class="w-full flex justify-center min-h-screen bg-zinc-800 px-4 sm:px-6 lg:px-8 py-8 text-white">
+  <div class="post-details w-full sm:w-2/3 md:w-1/2 lg:w-1/3">
+    <div class="w-full h-64 sm:h-80 rounded-lg bg-zinc-700 overflow-hidden">
       <img class="w-full h-full object-cover" src="/images/uploads/<%= post.image %>" alt="">
     </div>
-    <h1 class="mt-4 text-2xl flex justify-center font-semibold"><%= post.title %></h1>
+    <h1 class="mt-4 text-xl sm:text-2xl flex justify-center font-semibold"><%= post.title %></h1>
     <p class="mt-2 text-sm flex justify-center"><%= post.description %></p>
     <p class="mt-2 text-xs text-zinc-400 flex justify-center">Posted by <%= post.user.username %></p>
   </div>
